Fixed scroll bar aligning

--- a/index.css
+++ b/index.css
@@ -96,6 +96,8 @@ body {
     .questions_list {
        overflow-y: scroll;
        max-height: 570px;
+       margin-top: 10px; 
+       margin-right: 215px;
     }
 
     .questions_list::-webkit-scrollbar {
@@ -109,21 +111,13 @@ body {
        border-radius: 2px;
     }
 
-    .questions_list::-webkit-scrollbar-track {
-        /* Adjust the color as needed */
-    }
-
-
-
-
-
    .text_box {
+     width:clac(100%-185px);
      height: 125px;
      margin-top: 15px;
      margin-left: 190px; /* Adjusted margin-left to position the text box 10px left of the important box */
-     margin-right: 245px;
-   }
-
+     margin-right: 10px;
+  }
 
    .question_header {
      color: white;
@@ -136,7 +130,6 @@ body {
      background-color: var(--text-box-bar-color);
      border: 1.5px solid var(--border-color);
  }
-
 
    .menu{
        list-style-type: none;
@@ -157,12 +150,10 @@ body {
        border-radius: 0 7px 7px 0;
    }
 
-
    .menu_item:hover {
        opacity: 1.0;
        background-color:rgba(255, 255, 255, 0.5);
    }
-
 
    .semicircle-button {
      height: 10rem;
